feat: add kaeru icon